Added Accept / Reject UI

--- a/Google_Drive_File_Organizer.ipynb
+++ b/Google_Drive_File_Organizer.ipynb
@@ -24,35 +24,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "ea4b6b48",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ea4b6b48",
-        "outputId": "43917d06-5bbf-4633-d0fc-f3e141d09b99"
+        "id": "ea4b6b48"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/362.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m358.4/362.4 kB\u001b[0m \u001b[31m22.2 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m362.4/362.4 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/75.6 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.9/77.9 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m318.9/318.9 kB\u001b[0m \u001b[31m11.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Install required packages\n",
         "!pip install openai --quiet\n",
+        "!pip install ipywidgets --quiet\n",
         "\n",
         "import os\n",
         "import pandas as pd\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display, clear_output\n",
         "from google.colab import auth, drive, userdata\n",
         "from googleapiclient.discovery import build\n",
         "from googleapiclient.errors import HttpError\n",
@@ -63,24 +49,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "886888a0",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "886888a0",
-        "outputId": "64151f97-9fbc-410f-f9a4-976dfa4b1071"
+        "id": "886888a0"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Authenticate and create the required clients\n",
         "auth.authenticate_user()\n",
@@ -104,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "42c35066",
       "metadata": {
         "id": "42c35066"
@@ -119,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "0fd65e8d",
       "metadata": {
         "id": "0fd65e8d"
@@ -152,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "a8ae3da1",
       "metadata": {
         "id": "a8ae3da1"
@@ -177,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "6e562ad8",
       "metadata": {
         "id": "6e562ad8"
@@ -212,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "c87430da",
       "metadata": {
         "id": "c87430da"
@@ -250,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "5e5c0920",
       "metadata": {
         "id": "5e5c0920"
@@ -263,7 +237,9 @@
         "{', '.join([folder['name'] for folder in folders])}\n",
         "\n",
         "Should this file be moved? If yes, to which folder? If no, say 'No move needed.'\n",
-        "Provide a brief explanation for your decision.\"\"\"\n",
+        "Provide a brief explanation for your decision.\n",
+        "Untitled documents sheets and slides are typically spam and should be deleted\n",
+        "\"\"\"\n",
         "\n",
         "    try:\n",
         "        response = client.chat.completions.create(\n",
@@ -291,7 +267,7 @@
         "            target_folder = next((folder for folder in folders if folder['name'] in content), None)\n",
         "\n",
         "            if target_folder:\n",
-        "                print(f\"Fetching path for folder ID: {target_folder['id']}\")\n",
+        "                print(f\"Fetching path for folder ID: {target_folder['id'][:3]}\")\n",
         "                folder_path = get_folder_path(service, target_folder['id'])\n",
         "                return {\n",
         "                    \"move_needed\": True,\n",
@@ -343,24 +319,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "6cf250a4",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6cf250a4",
-        "outputId": "2f048a9c-d9f0-4dec-df78-8dc1e938daf2"
+        "id": "6cf250a4"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Fetching personal files...\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Initialize the Google Drive service\n",
         "service = get_drive_service()\n",
@@ -372,24 +336,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "d2dc2be4",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d2dc2be4",
-        "outputId": "ecfcf3d0-b6dd-45bf-c227-41a83ea220c8"
+        "id": "d2dc2be4"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Fetching shared drives and folders...\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Fetch shared drives and folders\n",
         "print(\"Fetching shared drives and folders...\")\n",
@@ -444,6 +396,114 @@
         "id": "CayxoaO74i5U"
       },
       "id": "CayxoaO74i5U"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = df.to_dict(orient='records')\n",
+        "\n",
+        "# Define the pagination variables\n",
+        "page_size = 10  # Number of rows per page\n",
+        "current_page = 0  # Start at the first page\n",
+        "\n",
+        "# Dictionary to keep track of the transfer state for each file\n",
+        "transfer_state = {i: None for i in range(len(data))}  # None, \"Accepted\", \"Declined\"\n",
+        "\n",
+        "# Function to create the UI for each row\n",
+        "def create_row_widgets(index, row):\n",
+        "    accept_button = widgets.Button(description=\"Accept\", button_style='success', layout=widgets.Layout(width='80px'))\n",
+        "    decline_button = widgets.Button(description=\"Decline\", button_style='danger', layout=widgets.Layout(width='80px'))\n",
+        "\n",
+        "    # Set button states based on previous actions\n",
+        "    if transfer_state[index] == \"Accepted\":\n",
+        "        accept_button.disabled = True\n",
+        "        decline_button.disabled = True\n",
+        "    elif transfer_state[index] == \"Declined\":\n",
+        "        accept_button.disabled = True\n",
+        "        decline_button.disabled = True\n",
+        "\n",
+        "    # Define button click handlers\n",
+        "    def on_accept_clicked(b):\n",
+        "        accept_button.disabled = True\n",
+        "        decline_button.disabled = True\n",
+        "        transfer_state[index] = \"Accepted\"\n",
+        "        print(f\"Accepted: {row['File Name']}\")\n",
+        "\n",
+        "    def on_decline_clicked(b):\n",
+        "        accept_button.disabled = True\n",
+        "        decline_button.disabled = True\n",
+        "        transfer_state[index] = \"Declined\"\n",
+        "        print(f\"Declined: {row['File Name']}\")\n",
+        "\n",
+        "    accept_button.on_click(on_accept_clicked)\n",
+        "    decline_button.on_click(on_decline_clicked)\n",
+        "\n",
+        "    row_widgets = widgets.HBox([\n",
+        "        widgets.Label(row['File Name'], layout=widgets.Layout(width='40%')),\n",
+        "        widgets.Label(row['Current Location'], layout=widgets.Layout(width='20%')),\n",
+        "        widgets.Label(row['Target Folder'] if row['Target Folder'] else \"No move needed\", layout=widgets.Layout(width='20%')),\n",
+        "        accept_button,\n",
+        "        decline_button\n",
+        "    ])\n",
+        "    return row_widgets\n",
+        "\n",
+        "# Function to update the table\n",
+        "def update_table():\n",
+        "    with output:\n",
+        "        clear_output()\n",
+        "        start = current_page * page_size\n",
+        "        end = start + page_size\n",
+        "        page_data = data[start:end]\n",
+        "\n",
+        "        # Display each row with buttons\n",
+        "        for i, row in enumerate(page_data, start=start):\n",
+        "            display(create_row_widgets(i, row))\n",
+        "\n",
+        "# Functions to handle pagination\n",
+        "def on_next_page(b):\n",
+        "    global current_page\n",
+        "    if (current_page + 1) * page_size < len(data):\n",
+        "        current_page += 1\n",
+        "        update_table()\n",
+        "\n",
+        "def on_prev_page(b):\n",
+        "    global current_page\n",
+        "    if current_page > 0:\n",
+        "        current_page -= 1\n",
+        "        update_table()\n",
+        "\n",
+        "# Create the pagination buttons\n",
+        "next_button = widgets.Button(description=\"Next\", button_style='primary')\n",
+        "prev_button = widgets.Button(description=\"Previous\", button_style='primary')\n",
+        "\n",
+        "# Set button callbacks\n",
+        "next_button.on_click(on_next_page)\n",
+        "prev_button.on_click(on_prev_page)\n",
+        "\n",
+        "# Output area for the table\n",
+        "output = widgets.Output()\n",
+        "\n",
+        "# Display the UI\n",
+        "display(widgets.HBox([prev_button, next_button]))\n",
+        "display(output)\n",
+        "update_table()"
+      ],
+      "metadata": {
+        "id": "uJSJrueZSu9V"
+      },
+      "id": "uJSJrueZSu9V",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2O_ygf5STTai"
+      },
+      "id": "2O_ygf5STTai",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
